# Code-Review-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pr_review.yml
src/code_reviewer/: __init__.py  cli.py  config.py
src/code_reviewer/agents/: __init__.py  base_agent.py  docs.py  graph.py  logic.py  performance.py  security.py  state.py  style.py
src/code_reviewer/analyzers/: __init__.py  ast_analyzer.py  diff_parser.py  static_checks.py
src/code_reviewer/api/: __init__.py  main.py  webhook.py
src/code_reviewer/core/: __init__.py  correlator.py  llm_client.py  models.py  pr_reviewer.py  prompts.py  reviewer.py
src/code_reviewer/indexer/: __init__.py  cache.py  chunker.py  dependency_graph.py  embedder.py  file_walker.py  indexer.py  risk_scorer.py  store.py
src/code_reviewer/integrations/: __init__.py  github_client.py
src/code_reviewer/retrieval/: __init__.py  retriever.py
tests/fixtures/: pr_opened_payload.json
tests/integration/: test_agent_graph.py
tests/unit/: test_agents.py  test_agents_base.py  test_agents_specialized.py  test_ast_analyzer.py  test_cache.py  test_chunker.py  test_cli_fixes.py  test_cli_helpers.py  test_cli_repo.py  test_config.py  test_correlator.py  test_dependency_graph.py  test_diff_parser.py  test_embedder.py  test_file_walker.py  test_github_client.py  test_graph.py  test_llm_client.py  test_models.py  test_pr_reviewer.py  test_retriever.py  test_reviewer.py  test_reviewer_context.py  test_risk_scorer.py  test_static_checks.py  test_store.py  test_webhook.py
(+10 files in other folders)
